changed simple to simplified

--- a/test/data_inference_example.ipynb
+++ b/test/data_inference_example.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "# Defining models as classes\n",
     "\n",
-    "In this code, models used to perform inference on data are defined as classes. They take the data as input, and contain methods which calculate the log likelihood, log likelihood gradient, and log likelihood hessian. The table below indicates which methods are needed to perform each of the algorithms.\n",
+    "In this code, models used to perform inference on data are defined as classes. They take the data as input when they are instantiated, and contain methods which calculate the log likelihood (with an option for the negative log likelihood), log likelihood gradient, and log likelihood hessian. The table below indicates which methods are needed to perform each of the algorithms.\n",
     "\n",
     "|                         | Random Walk | MALA     | smMALA   |\n",
     "| :--------               | :---------: | :------: | :------: |\n",
@@ -398,7 +398,7 @@
     "\n",
     "step_size = 0.4\n",
     "\n",
-    "output = covid_inference.simple_manifold_mala(negative_binomial_test,\n",
+    "output = covid_inference.simplified_manifold_mala(negative_binomial_test,\n",
     "                                              number_of_samples,\n",
     "                                              initial_position,\n",
     "                                              step_size)\n",
@@ -595,7 +595,7 @@
     "\n",
     "step_size = 0.5\n",
     "\n",
-    "output = covid_inference.simple_manifold_mala(negative_binomial_test,\n",
+    "output = covid_inference.simplified_manifold_mala(negative_binomial_test,\n",
     "                                              number_of_samples,\n",
     "                                              initial_position,\n",
     "                                              step_size)\n",
