updated doubling time calculation

--- a/test/data_inference_example.ipynb
+++ b/test/data_inference_example.ipynb
@@ -329,7 +329,7 @@
     "lower_error = np.percentile(ys,2.5,axis=1)\n",
     "upper_error = np.percentile(ys,97.5,axis=1)\n",
     "\n",
-    "doubling_time = np.log(2.0)/np.mean(output[:,1])\n",
+    "doubling_time = np.mean(np.log(2.0)/output[:,1])\n",
     "\n",
     "fig, ax = plt.subplots(1,2,figsize=(12,5),sharey='row')\n",
     "ax[0].plot(days,mu,linestyle='-',c='r',\n",
@@ -515,7 +515,7 @@
     "lower_error = np.percentile(ys,2.5,axis=1)\n",
     "upper_error = np.percentile(ys,97.5,axis=1)\n",
     "\n",
-    "doubling_time = np.log(2.0)/np.mean(output[:,1])\n",
+    "doubling_time = np.mean(np.log(2.0)/output[:,1])\n",
     "\n",
     "fig, ax = plt.subplots(1,2,figsize=(12,5),sharey='row')\n",
     "ax[0].plot(days,mu,linestyle='-',c='r',\n",
@@ -714,7 +714,7 @@
     "lower_error = np.percentile(ys,2.5,axis=1)\n",
     "upper_error = np.percentile(ys,97.5,axis=1)\n",
     "\n",
-    "doubling_time = np.log(2.0)/np.mean(output[:,1])\n",
+    "doubling_time = np.mean(np.log(2.0)/output[:,1])\n",
     "\n",
     "fig, ax = plt.subplots(1,figsize=(6,5),sharey='row')\n",
     "ax.plot(days,mu,linestyle='-',c='r',\n",
